--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@ header .bg {
   background-position: center;
   background-size: 100%;
   z-index: -1;
-  filter: brightness(0.5);
+  height: 132px;
 }
 
 h1 {
